Added JSonTableEditor